--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-    <title>hello</title> 
+    <title>welcome elio!</title> 
 </head>
 <body>
-	hi
+	<iframe src="https://giphy.com/embed/FJCzc8XyKv7eo" width="480" height="269" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/the-lion-king-simba-FJCzc8XyKv7eo">via GIPHY</a></p>
 </body>
 </html>
