--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>welcome elio!</title> 
 </head>
 <body>
-	<iframe src="https://giphy.com/embed/FJCzc8XyKv7eo" width="480" height="269" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/the-lion-king-simba-FJCzc8XyKv7eo">via GIPHY</a></p>
+	<iframe src="https://giphy.com/embed/FJCzc8XyKv7eo" width="480" height="269" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
 </body>
 </html>
